Fix duplicate ID conflict breaking delete button

--- a/src/control/index.html
+++ b/src/control/index.html
@@ -403,7 +403,7 @@
       </label>
       <div class="confirm-buttons">
         <button id="confirmCancel" class="secondary">Cancel</button>
-        <button id="confirmDelete" class="danger">Delete</button>
+        <button id="confirmDeleteBtn" class="danger">Delete</button>
       </div>
     </div>
   </div>
