Increase default font to 35vw, keep progress bar always visible

--- a/src/control/index.html
+++ b/src/control/index.html
@@ -42,7 +42,7 @@
     </div>
 
     <!-- Progress Bar -->
-    <div id="timerProgressContainer" class="timer-progress-container hidden">
+    <div id="timerProgressContainer" class="timer-progress-container">
       <span id="elapsedTime" class="progress-time">00:00</span>
       <div class="progress-track">
         <div id="progressFill" class="progress-fill"></div>
@@ -352,7 +352,7 @@
           </div>
           <div class="kv">
             <label for="defaultFontSize">Font Size (vw)</label>
-            <input id="defaultFontSize" type="number" min="5" max="100" step="1" value="30" />
+            <input id="defaultFontSize" type="number" min="5" max="100" step="1" value="35" />
           </div>
           <div class="kv">
             <label for="defaultFontColor">Font Color</label>
