Revert "Fix message downscale jump at 1065px"
This reverts commit 0f723ab77830d6b88ff0168436b99222c9aafb43.

--- a/src/control/index.html
+++ b/src/control/index.html
@@ -47,8 +47,11 @@
 
     <!-- Progress Bar (Interactive with seek functionality) -->
     <div id="timerProgressContainer" class="timer-progress-container">
-      <!-- Timer mode indicator (C/D, C/U, TOD) -->
-      <span id="timerModeIndicator" class="timer-mode-indicator">--</span>
+      <!-- Current clock time (useful for TOD mode) -->
+      <span id="currentTimeDisplay" class="current-time-display">--:--:--</span>
+
+      <!-- Elapsed time -->
+      <span id="elapsedTime" class="progress-time">00:00</span>
 
       <!-- Interactive track -->
       <div class="progress-track" id="progressTrack">
