Add unhandledrejection handler for module import errors

--- a/src/control/index.html
+++ b/src/control/index.html
@@ -664,11 +664,16 @@
   </footer>
 
   <script>
-    // Catch any unhandled errors (including module import errors)
+    // Catch any unhandled errors
     window.onerror = function(msg, url, line, col, error) {
       document.body.innerHTML = '<div style="color:red;padding:20px;font-size:14px;font-family:monospace;white-space:pre-wrap;">SCRIPT ERROR:\n' + msg + '\n\nFile: ' + url + '\nLine: ' + line + '\n\n' + (error ? error.stack : '') + '</div>';
       return true;
     };
+    // Catch module import errors (Promise rejections)
+    window.addEventListener('unhandledrejection', function(event) {
+      var err = event.reason;
+      document.body.innerHTML = '<div style="color:red;padding:20px;font-size:14px;font-family:monospace;white-space:pre-wrap;">MODULE ERROR:\n' + (err.message || err) + '\n\n' + (err.stack || '') + '</div>';
+    });
   </script>
   <script type="module" src="control.js"></script>
 </body>
